changes to the answer editor: - popover opens instantly when creating new answer - adjusted the formatting and spacing of text quizzes -fixed issue where popover was under details panel

--- a/app/styles/main-foundation.css
+++ b/app/styles/main-foundation.css
@@ -48,7 +48,7 @@ width: 78%;
 .details-navigator-container{
   height: 0;
   overflow-y: auto;
-  z-index: 1 !important;
+  /*z-index: 1 !important;*/
   /*top: -5px;*/
   right: -0.96em;
   -webkit-overflow-scrolling: touch;
